--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-signup-form></app-signup-form>
+<div class="root">
+    <h1>{{title}}</h1>
+    <app-signup-form></app-signup-form>    
+</div>
